few html updates

--- a/project1/index.html
+++ b/project1/index.html
@@ -26,9 +26,32 @@
 
     <main>
       <figure>
-        <img width="400" src="img/taco.png" alt="image of a taco" />
+        <img width="400" src="img/taco.png" alt="image of taco" />
         <figcaption>Tacos and a drink</figcaption>
       </figure>
+
+      <hr />
+
+      <section>
+        <h1>About LTS</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+          suscipit, repellendus tempore sint optio ut a dolorem earum quasi,
+          ipsam nemo explicabo et delectus corrupti obcaecati commodi ad quia
+          dolores?
+        </p>
+
+        <h3>Taco Trivia</h3>
+        <details>
+          <summary>Lorem ipsum dolor sit,</summary>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur
+            neque obcaecati debitis delectus saepe iusto veniam, nihil hic
+            impedit fugit doloribus exercitationem ea expedita itaque ducimus
+            quos dignissimos asperiores cupiditate!
+          </p>
+        </details>
+      </section>
     </main>
 
     <footer></footer>
