--- a/project1/index.html
+++ b/project1/index.html
@@ -57,29 +57,7 @@
         <h2>Our Menu</h2>
         <hr />
 
-        <table>
-          <thead>
-            <tr>
-              <th>Our Tacos</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Tacos</td>
-              <td>Qty</td>
-              <td>Price</td>
-            </tr>
-            <tr>
-              <td>Crunchy</td>
-              <td>1</td>
-              <td>$1.50</td>
-              <td>2</td>
-              <td>$2.50</td>
-              <td>3</td>
-              <td>$3.25</td>
-            </tr>
-          </tbody>
-        </table>
+        <!-- ADD YOUR MENU TABLE HERE -->
       </section>
     </main>
 
