worked on the hero section of our portfolio site

--- a/personal-porfolio/index.html
+++ b/personal-porfolio/index.html
@@ -5,25 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="index.css" />
+
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- nav section -->
     <nav>
       <!-- left -->
       <span class="nav-item">
-        <a target="_blank" href="https://wa.me/233200904208">whatsapp</a>
-        <a target="_blank" href="https://github.com/destinydinam">github</a>
+        <a target="_blank" href="https://wa.me/233200904208">
+          <i class="bx bxl-whatsapp"></i>
+        </a>
+        <a target="_blank" href="https://github.com/destinydinam">
+          <i class="bx bxl-github"></i>
+        </a>
       </span>
 
       <!-- right -->
       <span class="nav-item">
-        <a target="_blank" href="tel:+233200904208">phone</a>
-        <a target="_blank" href="mailto:destinydinam1@gmail.com">mail</a>
+        <a target="_blank" href="tel:+233200904208"
+          ><i class="bx bx-phone"></i
+        ></a>
+        <a target="_blank" href="mailto:destinydinam1@gmail.com"
+          ><i class="bx bxl-gmail"></i
+        ></a>
       </span>
     </nav>
 
     <!-- main section -->
-    <main>main</main>
+    <main>
+      <!-- hero -->
+      <section class="hero-section">
+        <!-- image -->
+        <div>
+          <img src="images/me.jpg" alt="me" width="140px" class="hero-img" />
+        </div>
+
+        <!-- text -->
+        <h2>Hi, I'm <span style="color: #f28918"> Destiny Keleto </span></h2>
+
+        <!-- links -->
+        <ul class="hero-links">
+          <li>
+            <a href="#about">About</a>
+          </li>
+          <li>
+            <a href="#experience">Experience</a>
+          </li>
+          <li>
+            <a href="#skills">Skills</a>
+          </li>
+          <li>
+            <a href="#projects">Projects</a>
+          </li>
+          <li>
+            <a href="#contacts">Contacts</a>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <!-- footer section -->
     <footer>footer</footer>
