added call to job-route

--- a/personal-porfolio/index.html
+++ b/personal-porfolio/index.html
@@ -18,32 +18,39 @@
     <nav>
       <!-- left -->
       <span class="nav-item">
-        <a target="_blank" href="https://wa.me/233200904208">
+        <a class="wa-icon" target="_blank" href="https://wa.me/233200904208">
           <i class="bx bxl-whatsapp"></i>
         </a>
-        <a target="_blank" href="https://github.com/destinydinam">
+        <a
+          class="gh-icon"
+          target="_blank"
+          href="https://github.com/destinydinam"
+        >
           <i class="bx bxl-github"></i>
         </a>
       </span>
 
       <!-- right -->
       <span class="nav-item">
-        <a target="_blank" href="tel:+233200904208"
+        <a class="ph-icon" target="_blank" href="tel:+233200904208"
           ><i class="bx bx-phone"></i
         ></a>
-        <a target="_blank" href="mailto:destinydinam1@gmail.com"
+        <a class="em-icon" target="_blank" href="mailto:destinydinam1@gmail.com"
           ><i class="bx bxl-gmail"></i
         ></a>
       </span>
     </nav>
+    <br />
+    <br />
+    <br />
 
     <!-- main section -->
     <main>
       <!-- hero -->
       <section class="hero-section">
         <!-- image -->
-        <div>
-          <img src="images/me.jpg" alt="me" width="140px" class="hero-img" />
+        <div class="hero-img">
+          <img src="images/me.jpg" alt="me" class="hero-img" />
         </div>
 
         <!-- text -->
@@ -67,6 +74,57 @@
             <a href="#contacts">Contacts</a>
           </li>
         </ul>
+      </section>
+
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+
+      <!-- about -->
+      <section id="about">
+        <p class="heading">ABOUT</p>
+        <br />
+        <div class="about">
+          <!-- img -->
+          <div class="about-img">
+            <img src="images/me.jpg" alt="me" />
+          </div>
+
+          <div>
+            <h3 class="about-heading">
+              Here is a
+              <span
+                style="
+                  text-decoration: underline;
+                  text-decoration-color: #f28918;
+                "
+              >
+                little</span
+              >
+              background
+            </h3>
+            <div style="text-align: center; max-width: 500px">
+              <p>
+                I am an enthusiastic software developer. I have built projects
+                with skills in TypeScript, React, Next.js, Golang, MySQL among
+                others. I excel at problem-solving, a skill refined through
+                years of experience building full-stack projects.
+              </p>
+              <p>
+                I pride myself on being a good communicator. One of my personal
+                strengths is my attention to detail, which is evident in the
+                quality code I consistently push. My career aspiration is to
+                progress into a role that allows me to utilize both my technical
+                abilities and leadership skills to drive progress within an
+                organization. I believe in maintaining regular communication
+                throughout project lifecycles, ensuring a smooth and successful
+                delivery.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
