experience and skills section

--- a/personal-porfolio/index.html
+++ b/personal-porfolio/index.html
@@ -127,8 +127,236 @@
           </div>
         </div>
       </section>
+
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <!-- experience -->
+      <section id="experience">
+        <p class="heading">EXPERIENCE</p>
+        <br />
+        <br />
+
+        <div class="experience">
+          <div class="ex-card shadow-inner shadow-yellow-600">
+            <br />
+            <strong>Junior Full Stack Developer</strong>
+            <p style="color: #f28918">@</p>
+            <strong>Creation Unite</strong>
+            <p style="color: gray">August 2022 - November 2022</p>
+            <br />
+          </div>
+
+          <div class="ex-card shadow-inner shadow-yellow-600">
+            <br />
+            <strong>Junior Full Stack Developer</strong>
+            <p style="color: #f28918">@</p>
+            <strong>Creation Unite</strong>
+            <p style="color: gray">August 2022 - November 2022</p>
+            <br />
+          </div>
+
+          <div class="ex-card shadow-inner shadow-yellow-600">
+            <br />
+            <strong>Junior Full Stack Developer</strong>
+            <p style="color: #f28918">@</p>
+            <strong>Creation Unite</strong>
+            <p style="color: gray">August 2022 - November 2022</p>
+            <br />
+          </div>
+
+          <div class="ex-card shadow-inner shadow-yellow-600">
+            <br />
+            <strong>Junior Full Stack Developer</strong>
+            <p style="color: #f28918">@</p>
+            <strong>Creation Unite</strong>
+            <p style="color: gray">August 2022 - November 2022</p>
+            <br />
+          </div>
+        </div>
+      </section>
+
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+
+      <!-- Skills -->
+      <section id="skills">
+        <p class="heading">SKILLS</p>
+        <br />
+        <br />
+
+        <div class="skills">
+          <div class="skill">
+            <div>
+              <img
+                width="50"
+                height="50"
+                src="images/javascript.png"
+                alt="skill-name"
+              />
+              <!-- <div class="skill-length">
+                <p>3 years</p>
+              </div> -->
+            </div>
+            <p style="text-align: center">Javascript</p>
+          </div>
+          <div class="skill">
+            <div>
+              <img
+                width="50"
+                height="50"
+                src="images/javascript.png"
+                alt="skill-name"
+              />
+              <!-- <div class="skill-length">
+                <p>3 years</p>
+              </div> -->
+            </div>
+            <p style="text-align: center">Javascript</p>
+          </div>
+          <div class="skill">
+            <div>
+              <img
+                width="50"
+                height="50"
+                src="images/javascript.png"
+                alt="skill-name"
+              />
+              <!-- <div class="skill-length">
+                <p>3 years</p>
+              </div> -->
+            </div>
+            <p style="text-align: center">Javascript</p>
+          </div>
+          <div class="skill">
+            <div>
+              <img
+                width="50"
+                height="50"
+                src="images/javascript.png"
+                alt="skill-name"
+              />
+              <!-- <div class="skill-length">
+                <p>3 years</p>
+              </div> -->
+            </div>
+            <p style="text-align: center">Javascript</p>
+          </div>
+          <div class="skill">
+            <div>
+              <img
+                width="50"
+                height="50"
+                src="images/javascript.png"
+                alt="skill-name"
+              />
+              <!-- <div class="skill-length">
+                <p>3 years</p>
+              </div> -->
+            </div>
+            <p style="text-align: center">Javascript</p>
+          </div>
+          <div class="skill">
+            <div>
+              <img
+                width="50"
+                height="50"
+                src="images/javascript.png"
+                alt="skill-name"
+              />
+              <!-- <div class="skill-length">
+                <p>3 years</p>
+              </div> -->
+            </div>
+            <p style="text-align: center">Javascript</p>
+          </div>
+          <div class="skill">
+            <div>
+              <img
+                width="50"
+                height="50"
+                src="images/javascript.png"
+                alt="skill-name"
+              />
+              <!-- <div class="skill-length">
+                <p>3 years</p>
+              </div> -->
+            </div>
+            <p style="text-align: center">Javascript</p>
+          </div>
+          <div class="skill">
+            <div>
+              <img
+                width="50"
+                height="50"
+                src="images/javascript.png"
+                alt="skill-name"
+              />
+              <!-- <div class="skill-length">
+                <p>3 years</p>
+              </div> -->
+            </div>
+            <p style="text-align: center">Javascript</p>
+          </div>
+          <div class="skill">
+            <div>
+              <img
+                width="50"
+                height="50"
+                src="images/javascript.png"
+                alt="skill-name"
+              />
+              <!-- <div class="skill-length">
+                <p>3 years</p>
+              </div> -->
+            </div>
+            <p style="text-align: center">Javascript</p>
+          </div>
+          <div class="skill">
+            <div>
+              <img
+                width="50"
+                height="50"
+                src="images/javascript.png"
+                alt="skill-name"
+              />
+              <!-- <div class="skill-length">
+                <p>3 years</p>
+              </div> -->
+            </div>
+            <p style="text-align: center">Javascript</p>
+          </div>
+          <div class="skill">
+            <div>
+              <img
+                width="50"
+                height="50"
+                src="images/javascript.png"
+                alt="skill-name"
+              />
+              <!-- <div class="skill-length">
+                <p>3 years</p>
+              </div> -->
+            </div>
+            <p style="text-align: center">Javascript</p>
+          </div>
+        </div>
+      </section>
     </main>
 
+    <br />
+    <br />
+    <br />
+    <br />
     <!-- footer section -->
     <footer>footer</footer>
   </body>
