--- a/calculator/index.html
+++ b/calculator/index.html
@@ -5,30 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="index.css" />
-    <script src="index.js"></script>
   </head>
   <body>
     <div class="container">
-      <div class="screen"></div>
+      <div class="screen">
+        <input type="text" class="screen-input">
+      </div>
       <div class="keys">
         <button class="operator">+</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
         <button class="operator">-</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
         <button class="operator">*</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
         <button class="operator">/</button>
-        <button>0</button>
+        <button class="number">0</button>
         <button>.</button>
         <button class="operator">=</button>
         <button>c</button>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
