added the javascript for adding todo to our list

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -16,20 +16,16 @@
       <br />
 
       <div class="input-container">
-        <input type="text" />
+        <input id="todo-input" type="text" />
         <button class="add-btn">Add</button>
       </div>
 
       <br />
       <br />
       <h3>Tasks</h3>
+
       <br />
-      <ul id="todo-list" class="todo-list">
-        <li>
-          <p>1. Buy Milk</p>
-          <button class="delete-btn">Delete</button>
-        </li>
-      </ul>
+      <ul class="todo-list"></ul>
     </div>
 
     <script src="index.js"></script>
